--- a/toppage.html
+++ b/toppage.html
@@ -8,6 +8,7 @@
     <h1>Basic HTML Continued</h1>
     <img src="icecream.jpg" alt="Ice Cream Image">
     <p>
+      <u>This is some text that is underlined</u>
       <a href="index.html">This is a link to my index page</a>
       <a href="https://illinoisstate.edu"
       target="_blank">Illinois State University</a>
