--- a/EmmasSite.html
+++ b/EmmasSite.html
@@ -14,32 +14,29 @@
 		</header>
 			<nav>
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Subpage 1</a></li>
-					<li><a href="#">Subpage 2</a></li>
+					<li><a href="EmmasSite.html">Home</a></li>
+					<li><a href="EmmasSitePage2.html">About</a></li>
+					<li><a href="EmmasSitePage3.html">Artwork</a></li>
 				</ul>
 			</nav>
 			<main>
 
-				<p class = "move roundedbox ">Hi! My name is Emma Ansah and I am a sophomore student majoring in Creative Technology with an art emphasis at Illinois State University.</p>
+				<p class = "move roundedbox ">Hi! My name is Emma Ansah and I am a sophomore student at Illinois State University. I majoring in Creative Technology with an art emphasis.</p>
 
-				<img id="mainimg" src="HPphoto1.png" alt="flowers">
+				<img class="hpimg" src="1111.jpg" alt="flowers">
 
-				<section class="roundedbox ">
-					<p> I'll come to office hourse because I have no idea what to say -
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					Quam pellentesque nec nam aliquam sem. Dui faucibus in ornare quam viverra orci sagittis.
-					Massa sed elementum tempus egestas sed sed risus pretium. Vel quam elementum pulvinar etiam non.</p>
+				<section class="roundedbox hpp">
+					<p>At this university, I want to grow my skills as an artist in ways that I didn't have the opportunity to before.
+						Illinois State university's Creative Technologies major offers a program where I can explore new forms of art.</p>
 				</section>
 
-				<section class="roundedbox ">
-					<p>Also still tbd - Gravida neque convallis a cras semper auctor neque vitae tempus. Diam maecenas ultricies mi eget. Convallis tellus id interdum velit.
-					Non curabitur gravida arcu ac. Enim blandit volutpat maecenas volutpat. Sed libero enim sed faucibus turpis.
-					Pellentesque sit amet porttitor eget dolor morbi non. Ipsum nunc aliquet bibendum enim facilisis. Hendrerit dolor magna eget est.
+				<section class="roundedbox hpp">
+					<p>With this website, I want to showcase my progress as I discover these new outlets of creatvitiy.
+						 This portfolio is a manifestation of what I have learned over the past couple of months in this class, and I want to continue to improve this place as I learn.
 					</p>
 				</section>
 
-				<img src="HPphoto2.png" alt="flowers">
+				<img class="hpimg" src="HPphoto2.png" alt="flowers">
 
 			</main>
 
